syntax = "proto3";

package catalog.v1;

option go_package = "catalog/v1;v1";


message Product {
  string id = 1;
  string name = 2;
}

message GetProductRequest {
  string id = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

message CreateProductRequest {
  string name = 1;
}

message CreateProductResponse {
  Product product = 1;
}
