syntax = "proto3";

package v1;

import "google/api/annotations.proto";

option go_package = "api/proto/v1;v1";

message Product {
  string id = 1;
  string name = 2;
}

message GetProductRequest {
  string id = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

service CatalogService {
  rpc GetProduct(GetProductRequest) returns (Product) {
    option (google.api.http) = {
      get: "/v1/products/{id}"
    };
  }

  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
      get: "/v1/products"
    };
  }
}
